name:                fileswarm2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/fileswarm2#readme
author:              Gautham Ganapathy
maintainer:          gauthamg@gmail.com
copyright:           (c) Gautham Ganapathy, 2018
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fileswarm2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , bytestring
                     , bytestring-conversion
                     , containers
                     , cryptonite
                     , foundation
                     , lens
                     , memory
                     , mtl
                     , text
                     , time
